# ProjectApexHealth

./: .env.example  .firebaserc  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  netlify.toml  package-lock.json  package.json  start.sh  tsconfig.json  tsconfig.tsbuildinfo  turbo.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
apps/ai-services/: Dockerfile  pyproject.toml  requirements.txt
apps/ai-services/app/: config.py  main.py
apps/ai-services/app/agents/: orchestrator.py
apps/ai-services/app/routers/: agents.py  documents.py  predictions.py  voice.py  workflows.py
apps/ai-services/tests/: conftest.py  test_api.py
apps/api/: Dockerfile  jest.config.ts  package.json  tsconfig.json
docker/nginx/: nginx.conf
infrastructure/terraform/: main.tf  variables.tf
k8s/: ai-services-deployment.yaml  api-deployment.yaml  configmap.yaml  ingress.yaml  namespace.yaml  secrets.yaml  web-deployment.yaml
src/: App.tsx  index.css  main.tsx  test_accessibility.txt
src/components/: ThemeToggle.css  ThemeToggle.tsx
src/context/: AIPersonalizationContext.tsx  AuthContext.tsx  NavigationContext.tsx  ThemeContext.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: index.ts  useAIRecommendations.ts  useApiData.ts  useModuleData.ts  useRetry.ts  useWorkflowAutoSave.ts  useWorkflowValidation.ts
src/pages/: AICopilot.css  AICopilot.tsx  APIManagement.css  APIManagement.tsx  ActivityFeed.css  ActivityFeed.tsx  ActuarialTools.css  ActuarialTools.tsx  AdvancedAnalytics.css  AdvancedAnalytics.tsx  AgencyPortal.css  AgencyPortal.tsx  (+268 more)
(+496 files in other folders)
